[package]
name = "astra_formats"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["msbt_script", "atlas", "bundle"]
msbt_script = ["dep:logos", "dep:codespan-reporting"]
atlas = ["dep:tegra_swizzle", "dep:astc-decode", "dep:image"]
bundle = ["dep:lzma-rs", "dep:lz4_flex", "dep:binrw"]
ffi = []

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
quick-xml = { version = "0.29.0", features = ["serialize"] }
anyhow = "1.0.65"
indexmap = { version = "1.7.0", features = ["serde"] }
itertools = "0.10.5"
byteorder = "1.4.3"
encoding_rs = "0.8.31"
lz4_flex = { version = "0.10.0", optional = true }
binrw = { version = "0.11.2", optional = true }
lzma-rs = { version = "0.3.0", optional = true }
image = { version = "0.24.5", optional = true }
astc-decode = { version = "0.3.1", optional = true }
tegra_swizzle = { version = "0.3.0", optional = true }
logos = { version = "0.13.0", optional = true }
codespan-reporting = { version = "0.11.1", optional = true }
